# multiples-of-bytes-literals

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  multiples-of-bytes-literals.hpp
include/: multiples-of-bytes-literals.hpp
tests/: constexpr_test.cpp  doubles_test.cpp  size_test.cpp
